# COSC363_Assignment2

./: CMakeLists.txt  README.md  make.sh
include/: AABB.h  BVH.h  BVHNode.h  Cone.h  Cylinder.h  FilePath.h  Plane.h  Ray.h  RayBatchFactory.h  SceneObject.h  Sphere.h  UniqueStack.h
src/: AABB.cpp  BVH.cpp  Cone.cpp  Cylinder.cpp  Plane.cpp  Ray.cpp  RayBatchFactory.cpp  RayTracer.cpp  SceneObject.cpp  Sphere.cpp  TextureBMP.cpp
